added some java8 code